[CARROUSEL] fix regression on vertical align

--- a/assets/css/front/panels/panel-carrousel.styl
+++ b/assets/css/front/panels/panel-carrousel.styl
@@ -78,7 +78,7 @@
     perspective-origin center center
 
     li
-      background noir()
+      background rgba($dark-grey, .5)
       absolute top 0
       opacity 0
       transition opacity 1s, transform 1s
